# kairo

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dev-board-1-pin_cap.md  dev-board-1-pin_map.md  package.json  release-please-config.json
firmware/: CMakeLists.txt
firmware/.bak/aether-v1/: README.md
firmware/.bak/aether-v1/apps/: bluetooth_app.cpp  task_demo_app.cpp  wifi_app.cpp
firmware/.bak/aether-v1/apps-include/: bluetooth_app.h  camera_app.h  stopwatch_app.h  touch_test_app.h  ui_showcase_app.h  wifi_app.h
firmware/.bak/aether-v1/screens/: about_screen.cpp  close_and_open_modal.cpp  logs_screen.cpp  settings_screen.cpp  touch_settings_screen.cpp
firmware/.bak/aether-v1/screens-include/: about_screen.h  app_list_screen.h  camera_settings_screen.h  close_and_open_modal.h  home_screen.h  lock_screen.h  profile_settings_screen.h  settings_screen.h  sleep_settings_screen.h  sounds_settings_screen.h
firmware/.bak/aether-v1/ui/: aether_server.cpp  renderer.cpp  status_bar.cpp  widgets.cpp
firmware/.bak/aether-v1/ui-include/: aether_server.h  renderer.h  widgets.h
firmware/aether/: CMakeLists.txt
firmware/aether/include/aether/: aether.h  boot.h
firmware/aether/src/: aether_info.cpp  boot_display.cpp
firmware/assets/anims/: akira.panim  boxing.panim  cry.panim  dj.panim  doom.panim  read.panim  sleep.panim  tv.panim
firmware/boards/dev-board/: CMakeLists.txt
firmware/boards/dev-board/src/: dev_board.cpp  dev_board_key_map.cpp  eink_display.cpp  nvs_config_store.cpp  tca9534_buttons.cpp
firmware/boards/simulator/: CMakeLists.txt
firmware/boards/simulator/src/: simulator_board.cpp
firmware/boards/skyrizz-e32/: CMakeLists.txt
firmware/boards/skyrizz-e32/src/: e32_key_map.cpp  e32_sensors.cpp  es7243e_mic.cpp  ft6336_touch.cpp  gc2145_camera.cpp  i2s_speaker.cpp  lcd_driver.cpp  pal_wire.cpp  se050_driver.cpp  skyrizz_e32.cpp  xl9535.cpp
firmware/boards/skyrizz-solana/: CMakeLists.txt
firmware/boards/skyrizz-solana/src/: battery.cpp  lcd_driver.cpp  se050_driver.cpp  skyrizz_solana.cpp  solana_key_map.cpp  tca9534.cpp  touch_panel.cpp
firmware/build-host/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
firmware/build-host/Testing/Temporary/: CTestCostData.txt
firmware/build-host/boards/simulator/: CTestTestfile.cmake  Makefile  cmake_install.cmake
firmware/build-host/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
firmware/build-host/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  js_render_test  js_test  klp_test  layout_test  link_test  service_test
firmware/build-wasm/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
firmware/build-wasm/boards/simulator/: CTestTestfile.cmake  Makefile  cmake_install.cmake
firmware/build-wasm/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
firmware/build-wasm/targets/wasm/: CTestTestfile.cmake  Makefile  cmake_install.cmake  kairo.js  kairo.wasm
firmware/cmake/: nema_version.cmake  version.h.in
firmware/core/: CMakeLists.txt
firmware/core/include/kairo/: board.h  clock.h  platform.h  runtime.h  service.h  types.h
firmware/core/include/nema/: board.h  clock.h  input_event.h  message_queue.h  platform.h  runtime.h  service.h  task_runner.h  thread.h  types.h  waker.h
firmware/core/src/: runtime.cpp
firmware/core/src/app/: app_context.cpp  app_host.cpp  app_host_manager.cpp  app_registry.cpp  component_app.cpp  papp_installer.cpp  papp_package.cpp
firmware/core/src/apps/: bad_usb_app.cpp  badusb_parser.cpp  bluetooth_app.cpp  camera_app.cpp  clock_app.cpp  counter_app.cpp  dolphin_app.cpp  hello_app.cpp  js_app.cpp  js_app_store.cpp  stopwatch_app.cpp  task_demo_app.cpp  ticker_app.cpp  touch_test_app.cpp  ui_showcase_app.cpp  wallets_app.cpp  wasm_app.cpp  wasm_app_store.cpp  wifi_app.cpp
firmware/core/src/crypto/: sha256.cpp
firmware/core/src/event/: async_event_poster.cpp  event_bus.cpp
firmware/core/src/fs/: app_storage.cpp  mem_filesystem.cpp  vfs.cpp
firmware/core/src/hal/: async_display.cpp  remote_screen_tap.cpp
firmware/core/src/input/: gesture.cpp  i_key_map.cpp  i_touch_driver.cpp
firmware/core/src/js/: js_api.cpp  js_engine.cpp  js_runtime.cpp  nema_host_impl.cpp
firmware/core/src/link/: klp_codec.cpp  link_service.cpp  plp_codec.cpp
firmware/core/src/log/: console_sink.cpp  file_sink.cpp  logger.cpp  memory_sink.cpp
firmware/servers/fbcon/: CMakeLists.txt
firmware/targets/dev-board/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/targets/simulator/: CMakeLists.txt  main.cpp
firmware/targets/skyrizz-audiotest/: CMakeLists.txt  sdkconfig.defaults
firmware/targets/skyrizz-camtest/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/targets/skyrizz-e32/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/targets/skyrizz-solana/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/targets/wasm/: CMakeLists.txt  main.cpp
firmware/tests/: CMakeLists.txt  asset_test.cpp  bitcoin_chain_test.cpp  capability_test.cpp  cli_test.cpp  evm_chain_test.cpp  hd_wallet_test.cpp  js_dualimport_test.cpp  js_graceful_test.cpp  js_render_test.cpp  js_test.cpp  klp_test.cpp  layout_test.cpp  lazy_dir_loader_test.cpp  link_test.cpp  null_wifi_driver.h  nvs_backend_test.cpp  plp_test.cpp  rlp_test.cpp  se_backend_test.cpp  service_test.cpp  solana_chain_test.cpp  wallet_consent_test.cpp  wallet_controller_test.cpp  wallet_crypto_test.cpp  wallet_service_test.cpp  wallet_vault_test.cpp  wallets_app_test.cpp  wasm_test.cpp  wifi_contract_test.cpp
firmware/tools/: build-dev-board.sh  build-dev-ota.sh  build-esp32.sh  build-sim.sh  build-skyrizz-audiotest.sh  build-skyrizz-camtest.sh  build-skyrizz-e32.sh  build-skyrizz-solana.sh  build-wasm.sh  flash-dev-board.sh  flash-esp32.sh  flash-skyrizz-audiotest.sh  flash-skyrizz-camtest.sh  flash-skyrizz-e32.sh  flash-skyrizz-solana.sh  package-firmware.sh  publish-firmware.sh  run-sim.sh
(+1163 files in other folders)
